packages/kit/test/apps/basics/src/routes/errors/invalid-server-load-response/+page.server.js
export function load() {
	return ['nope'];
}
